# partner-ticket-agentic

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  dpia-gate.yml
Presentation/: Ajay_Antony_Capgemini_Panel_v4.pptx
config/: approved_models.yaml  budgets.yaml
data/: partners.json  runbooks.json  sample_tickets.json
docs/: AI_ACT_ASSESSMENT.md  DESIGN.md  LOAD_TEST_PLAN.md  RUNBOOK.md  SECURITY_REVIEW.md
docs/concepts/: 00-overview.html  01-llm.html  02-agent.html  03-orchestration.html  04-tools.html  05-rag.html  06-memory.html  07-safety.html  08-codebase.html  _shared.css  index.html
evals/: breach_replay.jsonl  duplicate_pairs.jsonl  insights.jsonl  routing_decisions.jsonl  runbook_relevance.jsonl  triage_categories.jsonl
frontend/: next.config.ts  package.json  pnpm-lock.yaml
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/how-it-works/: page.tsx
frontend/src/components/: topology.tsx
frontend/src/lib/: api.ts
scripts/: README.md  _lib.sh  down.sh  preflight.sh  smoke.sh  up.sh
src/partner_ticket_agentic/: __init__.py  __main__.py  cli.py  cost.py  graph.py  mcp_server.py  obs.py  safety.py
src/partner_ticket_agentic/agents/: __init__.py  drafter.py  enricher.py  insights.py  knowledge.py  linker.py  router.py  scheduler.py  triage.py  watchdog.py
src/partner_ticket_agentic/evals/: __init__.py  __main__.py
src/partner_ticket_agentic/memory/: __init__.py  episodic.py  longterm.py  working.py
src/partner_ticket_agentic/providers/: __init__.py  anthropic.py  base.py  mock.py  ollama.py
src/partner_ticket_agentic/tools/: __init__.py  calendar.py  crm.py  directory.py  inventory.py  oncall.py  open_tickets.py  policy.py  registry.py  runbook.py  templates.py  ticket_history.py  ticket_search.py
src/partner_ticket_agentic/web/: __init__.py  app.py  simulator.py
src/partner_ticket_agentic/web/static/: app.css  app.js  index.html
tests/: test_agent_enricher.py  test_agent_triage.py  test_agent_watchdog.py  test_agents_chain.py  test_anthropic_provider.py  test_cost.py  test_cost_budgets.py  test_evals.py  test_graph.py  test_graph_topology.py  test_hitl_contract.py  test_mcp_server.py  test_memory_episodic.py  test_memory_episodic_consent.py  test_memory_longterm.py  test_obs.py  test_obs_otel.py  test_ollama_provider.py  test_providers_mock.py  test_safety.py  test_smoke.py  test_tools.py  test_tools_policy.py  test_tools_registry.py  test_web.py
