[project]
name = "partner-ticket-agentic"
version = "0.1.0"
description = "Reference agentic platform for partner-ticketing in a telecom context — Capgemini Blue Harvest panel."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Ajay Antony" }]
keywords = ["langgraph", "pydantic", "agentic", "telecom", "ticketing", "anthropic", "ollama"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "langgraph>=0.2.50",
    "pydantic>=2.7",
    "anthropic>=0.40",
    "httpx>=0.27",
    "faiss-cpu>=1.8",
    "numpy>=1.26",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]
web = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
]
mcp = [
    "mcp>=1.2",
]

[project.scripts]
partner-ticket-agentic = "partner_ticket_agentic.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/partner_ticket_agentic"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle + pyflakes
    "I",             # isort
    "B",             # bugbear
    "UP",            # pyupgrade
    "SIM",           # simplify
    "RUF",           # ruff-specific
]
ignore = [
    "E501",          # line length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B011"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-q --strict-markers --strict-config"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:google.*",
    "ignore::PendingDeprecationWarning",
    # FAISS bundles SWIG-generated bindings that emit benign DeprecationWarnings
    # on import about SwigPyPacked/SwigPyObject/swigvarlink lacking __module__.
    # We can't fix these upstream and they crash pytest under filterwarnings=error.
    "ignore:builtin type Swig.*:DeprecationWarning",
    "ignore:builtin type swigvarlink.*:DeprecationWarning",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]
