[project]
name = "partner-ticket-agentic"
version = "0.1.0"
description = "Reference agentic platform for partner-ticketing in a telecom context — Capgemini Blue Harvest panel."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "Ajay Antony" }]
keywords = ["langgraph", "pydantic", "agentic", "telecom", "ticketing", "anthropic", "ollama"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

# Floors are the published stable as of May 2026 — pulling the upper bounds
# back to the actually-installed versions would lock the project to today's
# resolutions and miss the next batch of bug-fix releases. Each floor is
# the lowest version we've tested against; the resolver may install newer.
dependencies = [
    "langgraph>=1.0",         # 1.0 stable; current 1.1.x
    "langchain-core>=1.0",    # pinned so the resolver picks a version compatible with langgraph 1.x
    "pydantic>=2.10",         # current 2.13.x
    "anthropic>=0.90",        # current 0.97.x — supports prompt caching, extended thinking
    "httpx>=0.28",
    "faiss-cpu>=1.10",
    "numpy>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-cov>=7.0",
    "ruff>=0.10",
]
web = [
    "fastapi>=0.130",
    "uvicorn[standard]>=0.40",
]
mcp = [
    "mcp>=1.20",             # current 1.27.x — Anthropic-maintained Python SDK
]
otel = [
    "opentelemetry-api>=1.30",
    "opentelemetry-sdk>=1.30",
]

[project.scripts]
partner-ticket-agentic = "partner_ticket_agentic.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/partner_ticket_agentic"]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle + pyflakes
    "I",             # isort
    "B",             # bugbear
    "UP",            # pyupgrade
    "SIM",           # simplify
    "RUF",           # ruff-specific
]
ignore = [
    "E501",          # line length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B011"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-q --strict-markers --strict-config"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:google.*",
    "ignore::PendingDeprecationWarning",
    # FAISS bundles SWIG-generated bindings that emit benign DeprecationWarnings
    # on import about SwigPyPacked/SwigPyObject/swigvarlink lacking __module__.
    # We can't fix these upstream and they crash pytest under filterwarnings=error.
    "ignore:builtin type Swig.*:DeprecationWarning",
    "ignore:builtin type swigvarlink.*:DeprecationWarning",
]

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-cov>=7.0",
    "ruff>=0.10",
]
